syntax = "proto3";

package proto;

import "common.proto";

service WorkerService {
  rpc Sample(Empty) returns (SampleResponse) {}
  rpc Shuffle(ShuffleRequest) returns (Empty) {}
  rpc Demand(DemandRequest) returns (stream RecordMessage) {}
  rpc Send(SendRequest) returns (Empty) {}
  rpc Sort(Empty) returns (Empty) {}
  rpc Merge(Empty) returns (Empty) {}
}

message SampleResponse {
  repeated RecordMessage sample = 1;
}

message ShuffleRequest {
  message WorkerMessage {
    string ip = 1;
    int32 port = 2;
    bytes start = 3;
    bytes end = 4;
  }
   
  map<int32, WorkerMessage> id_to_worker = 1;
}

message DemandRequest {
  int32 id = 1;
}

message SendRequest {
  int32 size = 1;
  repeated RecordMessage partition = 2;
}
